--- a/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
+++ b/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="System.Drawing.Common" Version="4.6.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\NetBase\NetBase\NetBase.csproj" />
+  </ItemGroup>
+
 </Project>
