--- a/DevilDaggersAssetEditor/DevilDaggersAssetEditor.csproj
+++ b/DevilDaggersAssetEditor/DevilDaggersAssetEditor.csproj
@@ -362,6 +362,10 @@
       <Project>{65E7D153-FC35-4427-B868-FD10D9BFCD42}</Project>
       <Name>DevilDaggersCore</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\SyntaxHighlighter\SyntaxHighlighter.csproj">
+      <Project>{436c9bb2-d0e5-4801-8589-5f5acad919f4}</Project>
+      <Name>SyntaxHighlighter</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DevilDaggersAssetCore\DevilDaggersAssetCore.csproj">
       <Project>{281857FB-02AF-4425-B3C6-C0E00381D8D2}</Project>
       <Name>DevilDaggersAssetCore</Name>
