--- a/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
+++ b/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
@@ -20,6 +20,7 @@
 		<PackageReference Include="System.Drawing.Common" Version="4.6.1" />
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\..\JsonUtils\JsonUtils\JsonUtils.csproj" />
 		<ProjectReference Include="..\..\NetBase\NetBase\NetBase.csproj" />
 	</ItemGroup>
 </Project>
