--- a/DevilDaggersAssetEditor/DevilDaggersAssetEditor.csproj
+++ b/DevilDaggersAssetEditor/DevilDaggersAssetEditor.csproj
@@ -362,6 +362,10 @@
       <Project>{65E7D153-FC35-4427-B868-FD10D9BFCD42}</Project>
       <Name>DevilDaggersCore</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\JsonUtils\JsonUtils\JsonUtils.csproj">
+      <Project>{5CED0E44-2B47-4107-8A84-92102F7CCE5D}</Project>
+      <Name>JsonUtils</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\SyntaxHighlighter\SyntaxHighlighter\SyntaxHighlighter.csproj">
       <Project>{436c9bb2-d0e5-4801-8589-5f5acad919f4}</Project>
       <Name>SyntaxHighlighter</Name>
