--- a/DevilDaggersAssetEditor/DevilDaggersAssetEditor.csproj
+++ b/DevilDaggersAssetEditor/DevilDaggersAssetEditor.csproj
@@ -199,6 +199,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Gui\Windows\FileAnalyzer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Gui\Windows\Main.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -297,6 +301,9 @@
     </Compile>
     <Compile Include="Gui\Windows\Error.xaml.cs">
       <DependentUpon>Error.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Gui\Windows\FileAnalyzer.xaml.cs">
+      <DependentUpon>FileAnalyzer.xaml</DependentUpon>
     </Compile>
     <Compile Include="Gui\Windows\Main.xaml.cs">
       <DependentUpon>Main.xaml</DependentUpon>
