--- a/DevilDaggersAssetEditor/DevilDaggersAssetEditor.csproj
+++ b/DevilDaggersAssetEditor/DevilDaggersAssetEditor.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Code\AbstractAssetRowControlHandler.cs" />
     <Compile Include="Code\AbstractAssetTabControlHandler.cs" />
     <Compile Include="Code\AssetRowEntry.cs" />
+    <Compile Include="Code\AssetRowSorting.cs" />
     <Compile Include="Code\FileTabControlHandlers\AbstractFileTabControlHandler.cs" />
     <Compile Include="Code\FileTabControlHandlers\AudioFileTabControlHandler.cs" />
     <Compile Include="Code\FileTabControlHandlers\CoreFileTabControlHandler.cs" />
