--- a/Research/ParticleResearch/ParticleResearch.csproj
+++ b/Research/ParticleResearch/ParticleResearch.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{C2582AA8-80E2-41BB-8E1C-CD3F79B50A73}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ParticleExtract</RootNamespace>
+    <RootNamespace>ParticleResearch</RootNamespace>
     <AssemblyName>ParticleExtract</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -55,11 +55,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\JsonUtils\JsonUtils\JsonUtils.csproj">
+    <ProjectReference Include="..\..\..\JsonUtils\JsonUtils\JsonUtils.csproj">
       <Project>{5ced0e44-2b47-4107-8a84-92102f7cce5d}</Project>
       <Name>JsonUtils</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DevilDaggersAssetCore\DevilDaggersAssetCore.csproj">
+    <ProjectReference Include="..\..\DevilDaggersAssetCore\DevilDaggersAssetCore.csproj">
       <Project>{281857fb-02af-4425-b3c6-c0e00381d8d2}</Project>
       <Name>DevilDaggersAssetCore</Name>
     </ProjectReference>
