--- a/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
+++ b/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
@@ -20,7 +20,6 @@
 		<PackageReference Include="System.Drawing.Common" Version="4.6.1" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\..\JsonUtils\JsonUtils\JsonUtils.csproj" />
-		<ProjectReference Include="..\..\NetBase\NetBase\NetBase.csproj" />
+		<ProjectReference Include="..\..\DevilDaggersCore\DevilDaggersCore\DevilDaggersCore.csproj" />
 	</ItemGroup>
 </Project>
