--- a/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
+++ b/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
@@ -3,6 +3,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<LangVersion>8.0</LangVersion>
 		<Platforms>AnyCPU;x86;x64</Platforms>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<ItemGroup>
 		<EmbeddedResource Include="Content\audio\Audio.json" />
