Fix inconsistent folder structure

--- a/Research/ResourceResearch/ResourceResearch.csproj
+++ b/Research/ResourceResearch/ResourceResearch.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DevilDaggersAssetCore\DevilDaggersAssetCore.csproj" />
+    <ProjectReference Include="..\..\DevilDaggersAssetEditor\DevilDaggersAssetEditor.csproj" />
   </ItemGroup>
 
 </Project>
