--- a/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
+++ b/DevilDaggersAssetCore/DevilDaggersAssetCore.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<LangVersion>8.0</LangVersion>
-		<Platforms>AnyCPU;x86;x64</Platforms>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<Platforms>x64</Platforms>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<ItemGroup>
