Install Roslynator analyzers

--- a/DevilDaggersAssetEditor.New.Wpf/.editorconfig
+++ b/DevilDaggersAssetEditor.New.Wpf/.editorconfig
@@ -267,3 +267,9 @@ dotnet_diagnostic.SA1011.severity                                        = none
 dotnet_diagnostic.S112.severity                                          = none
 dotnet_diagnostic.S2368.severity                                         = none
 dotnet_diagnostic.S3358.severity                                         = none
+
+# RoslynatorAnalyzers suppressions
+
+# RCS1123: Add parentheses when necessary.
+
+dotnet_diagnostic.RCS1123.severity                                       = none
